# AI-Council

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  __init__.py  config.py  council.py  main.py  pyproject.toml  requirements.txt  setup.py  state.py  synthesis.py
.github/workflows/: ci.yml
agents/: __init__.py  operator.py  risk_analyst.py  strategist.py  visionary.py
