[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-council"
version = "1.0.0"
description = "A beautiful CLI-based multi-agent council system using Ollama"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["ai", "agents", "ollama", "council", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "langchain>=0.3.0",
    "langchain-ollama>=0.1.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.0.0",
    "rich>=13.7.0",
]

[project.scripts]
agentic-council = "agentic_council.main:main"

[tool.setuptools]
packages = ["agentic_council"]

